--- a/app/src/main/res/layout-small-port/activity_main.xml
+++ b/app/src/main/res/layout-small-port/activity_main.xml
@@ -35,6 +35,7 @@
         android:id="@+id/frag2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight=".5"/>
+        android:layout_weight=".5"
+        android:layout_marginTop="65dp" />
 
 </RelativeLayout>
